# rust-axum

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  diesel.toml
migrations/2025-01-29-110454_create_users/: up.sql
src/: main.rs  schema.rs
src/adapters/http/: user_controller.rs
src/app/: routes.rs
src/domains/user/: mod.rs
src/domains/user/dto/: request.rs  response.rs
src/domains/user/model/: user.rs
src/domains/user/repository/: user_repository.rs
src/domains/user/use_case/: user.rs
src/infrasturcture/: database.rs
src/shared/: app.rs  dto.rs  errors.rs  extractor.rs  mod.rs  request.rs  response.rs
